# impression-clock

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  clock.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
conf/: conf.yaml
docker-config/: bashrc
lib/: clockface.py  conf.py  impression.py  timekeeper.py
make/: Makefile.docker  Makefile.pi
systemd/: clock.service
tests/: font_size_test.py  test_clockface.py  test_impression.py  test_timekeeper.py
