[tool.poetry]
name = "impression-clock"
version = "0.1.0"
description = ""
authors = ["pikesley"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pillow = {version = "^8.0.1", optional = true}
PyYAML = "^5.3.1"
inky = {version = "^1.1.1", optional = true}

[tool.poetry.dev-dependencies]
freezegun = "^1.0.0"
isort = "^5.6.4"
black = "^20.8b1"
pytest = "^6.1.2"
pylint = "^2.6.0"
pytest-random-order = "^1.0.4"
pytest-cov = "^2.10.1"
ipdb = "^0.13.4"

[tool.poetry.extras]
Pillow = ["Pillow"]
inky = ["inky[rpi,fonts]"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
